3.6.1
- P4A_DB_Source::load() now returns an object also when setQuery() is used
- P4A_DB_Source::load()'s autosequence creation now checks that the field
  exists before calling the setSequence()
- a bug with P4A_Redirect_To_Url and P4A_Redirect_To_File was solved
  (bug #3039449)

3.6.0

- Zend Framework was updated to 1.10.3
- FCKEditor was dropped and CKEditor 3.3 was added
- all AJAX stack was rewritten to use JSON instead of XML
- in full AJAX environment external javascripts are loaded only if
  they were not loaded before
- in full AJAX environment widgets can now execute javascript code before
  or after the HTML substitution
- focus internal management was rewritten
- P4A_Mask::setLeftSidebarWidth(), setRightSidebarWidth(),
  getLeftSidebarWidth() and getRightSidebarWidth() methods were added
- jQuery::form was updated to 2.43
- jQuery was updated to 1.4.2
- jQuery UI was updated to 1.8.1
- jQuery::autocomplete plugin was replaced by jQuery UI autocomplete
- mask's right sidebar is now shown correctly
- P4A_Data_Source::exportToCSV() deprecated method was removed
- P4A::isPopupOpened() deprecated method was removed
- P4A_Mask::unsetFocus() deprecated method was removed
- P4A_Mask::displayText() deprecated method was removed
- P4A_Table::setHeader() deprecated method was removed
- P4A_Box::setValue() and getValue() deprecated methods ware removed
- P4A_DB::getAll(), queryAll(), getRow(), queryRow(), getCol(), queryCol(),
  getOne() and queryOne() deprecated methods ware removed
- P4A_Output_File now supports the "new window" param
- P4A_DB_Source::rowByPk() method now returns the retrieved row
- pt_BR translation was added to products_catalogue sample application
  (thanks to Cassiano Faria)
- es_MX translation was added to products_catalogue sample application
  (thanks to Edgar Joel)
- Yahoo CSS reset was updated to 3.1.0
- P4A_I18N::normalize() $num_of_decimals params now has a default value